--- a/RISWPF/RIS/RIS.csproj
+++ b/RISWPF/RIS/RIS.csproj
@@ -78,16 +78,16 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="GONGJU\Wenjianxuanzhe.cs" />
+    <Compile Include="GONGJU\Xiazaiwendang.cs" />
     <Compile Include="KONGJIAN\Biaogekongzhi.xaml.cs">
       <DependentUpon>Biaogekongzhi.xaml</DependentUpon>
     </Compile>
     <Compile Include="KONGJIAN\Fenyechaxun.xaml.cs">
       <DependentUpon>Fenyechaxun.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201512160310503_gregrewgwe.cs" />
-    <Compile Include="Migrations\201512160310503_gregrewgwe.Designer.cs">
-      <DependentUpon>201512160310503_gregrewgwe.cs</DependentUpon>
+    <Compile Include="Migrations\201512160752376_fewfew.cs" />
+    <Compile Include="Migrations\201512160752376_fewfew.Designer.cs">
+      <DependentUpon>201512160752376_fewfew.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="PAGE\SYST\Gerenzhongxin.xaml.cs">
@@ -104,9 +104,6 @@
       <DependentUpon>Jianceshenqingdan.xaml</DependentUpon>
     </Compile>
     <Compile Include="PAGE\ZUZHIPEIXING\LINCHUANGHLA\JIANCESHENQINGDAN\SJ.cs" />
-    <Compile Include="PAGE\ZUZHIPEIXING\LINCHUANGHLA\JIANCESHENQINGDAN\Tianjiawendang.xaml.cs">
-      <DependentUpon>Tianjiawendang.xaml</DependentUpon>
-    </Compile>
     <Compile Include="PAGE\ZUZHIPEIXING\LINCHUANGHLA\JIANCESHENQINGDAN\Tianjiayangben.xaml.cs">
       <DependentUpon>Tianjiayangben.xaml</DependentUpon>
     </Compile>
@@ -142,10 +139,6 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="PAGE\ZUZHIPEIXING\LINCHUANGHLA\JIANCESHENQINGDAN\Tianjiawendang.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Page Include="PAGE\ZUZHIPEIXING\LINCHUANGHLA\JIANCESHENQINGDAN\Tianjiayangben.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -176,8 +169,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <EmbeddedResource Include="Migrations\201512160310503_gregrewgwe.resx">
-      <DependentUpon>201512160310503_gregrewgwe.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201512160752376_fewfew.resx">
+      <DependentUpon>201512160752376_fewfew.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -197,6 +190,7 @@
     <Resource Include="RESOURCE\PIC\印章.png" />
     <Resource Include="RESOURCE\PIC\图标.ico" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
