--- a/RISWPF/CeShi01/packages.config
+++ b/RISWPF/CeShi01/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Aspose.BarCode" version="7.6.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="EntityFramework.zh-Hans" version="6.1.3" targetFramework="net46" />
 </packages>
