--- a/RISWPF/RIS/packages.config
+++ b/RISWPF/RIS/packages.config
@@ -3,4 +3,5 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="EntityFramework.zh-Hans" version="6.1.3" targetFramework="net46" />
   <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net46" />
+  <package id="ZXing.Net" version="0.14.0.1" targetFramework="net46" />
 </packages>
