--- a/RISWPF/HSWRIS/HSWRIS.csproj
+++ b/RISWPF/HSWRIS/HSWRIS.csproj
@@ -73,6 +73,26 @@
     <Compile Include="KONGJIAN\Liebiaokongzhi.xaml.cs">
       <DependentUpon>Liebiaokongzhi.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201601110517380_gre.cs" />
+    <Compile Include="Migrations\201601110517380_gre.Designer.cs">
+      <DependentUpon>201601110517380_gre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201601110520479_fefw.cs" />
+    <Compile Include="Migrations\201601110520479_fefw.Designer.cs">
+      <DependentUpon>201601110520479_fefw.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201601110539456_fewfw.cs" />
+    <Compile Include="Migrations\201601110539456_fewfw.Designer.cs">
+      <DependentUpon>201601110539456_fewfw.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201601110642245_fewfew.cs" />
+    <Compile Include="Migrations\201601110642245_fewfew.Designer.cs">
+      <DependentUpon>201601110642245_fewfew.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201601110801427_fefw1.cs" />
+    <Compile Include="Migrations\201601110801427_fefw1.Designer.cs">
+      <DependentUpon>201601110801427_fefw1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="PAGE\SYST\Gerenzhongxin.xaml.cs">
       <DependentUpon>Gerenzhongxin.xaml</DependentUpon>
@@ -86,6 +106,9 @@
     <Compile Include="PAGE\ZUZHIPEIXING\LINCHUANGHLA\JIANCESHENQINGDAN\SJ.cs" />
     <Compile Include="PAGE\ZUZHIPEIXING\LINCHUANGHLA\JIANCESHENQINGDAN\Tianjiashenqingdan.xaml.cs">
       <DependentUpon>Tianjiashenqingdan.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PAGE\ZUZHIPEIXING\LINCHUANGHLA\JIANCESHENQINGDAN\Tianjiayangben.xaml.cs">
+      <DependentUpon>Tianjiayangben.xaml</DependentUpon>
     </Compile>
     <Compile Include="Shujuku.cs" />
     <Compile Include="App.xaml.cs">
@@ -134,6 +157,21 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="Migrations\201601110517380_gre.resx">
+      <DependentUpon>201601110517380_gre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201601110520479_fefw.resx">
+      <DependentUpon>201601110520479_fefw.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201601110539456_fewfw.resx">
+      <DependentUpon>201601110539456_fewfw.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201601110642245_fewfew.resx">
+      <DependentUpon>201601110642245_fewfew.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201601110801427_fefw1.resx">
+      <DependentUpon>201601110801427_fefw1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -157,6 +195,10 @@
   <ItemGroup />
   <ItemGroup>
     <Page Include="PAGE\ZUZHIPEIXING\LINCHUANGHLA\JIANCESHENQINGDAN\Tianjiashenqingdan.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PAGE\ZUZHIPEIXING\LINCHUANGHLA\JIANCESHENQINGDAN\Tianjiayangben.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
