--- a/RISWPF/HSWRIS/HSWRIS.csproj
+++ b/RISWPF/HSWRIS/HSWRIS.csproj
@@ -77,6 +77,18 @@
     <Compile Include="Migrations\201601120322502_ji.Designer.cs">
       <DependentUpon>201601120322502_ji.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201601120528544_f.cs" />
+    <Compile Include="Migrations\201601120528544_f.Designer.cs">
+      <DependentUpon>201601120528544_f.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201601120548346_fewfew.cs" />
+    <Compile Include="Migrations\201601120548346_fewfew.Designer.cs">
+      <DependentUpon>201601120548346_fewfew.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201601120823057_gregre.cs" />
+    <Compile Include="Migrations\201601120823057_gregre.Designer.cs">
+      <DependentUpon>201601120823057_gregre.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="PAGE\SYST\Gerenzhongxin.xaml.cs">
       <DependentUpon>Gerenzhongxin.xaml</DependentUpon>
@@ -90,6 +102,9 @@
     <Compile Include="PAGE\ZUZHIPEIXING\LINCHUANGHLA\JIANCESHENQINGDAN\SJ.cs" />
     <Compile Include="PAGE\ZUZHIPEIXING\LINCHUANGHLA\JIANCESHENQINGDAN\Tianjiashenqingdan.xaml.cs">
       <DependentUpon>Tianjiashenqingdan.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PAGE\ZUZHIPEIXING\LINCHUANGHLA\JIANCESHENQINGDAN\Tianjiaweidian.xaml.cs">
+      <DependentUpon>Tianjiaweidian.xaml</DependentUpon>
     </Compile>
     <Compile Include="PAGE\ZUZHIPEIXING\LINCHUANGHLA\JIANCESHENQINGDAN\Tianjiayangben.xaml.cs">
       <DependentUpon>Tianjiayangben.xaml</DependentUpon>
@@ -144,6 +159,15 @@
     <EmbeddedResource Include="Migrations\201601120322502_ji.resx">
       <DependentUpon>201601120322502_ji.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201601120528544_f.resx">
+      <DependentUpon>201601120528544_f.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201601120548346_fewfew.resx">
+      <DependentUpon>201601120548346_fewfew.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201601120823057_gregre.resx">
+      <DependentUpon>201601120823057_gregre.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -167,6 +191,10 @@
   <ItemGroup />
   <ItemGroup>
     <Page Include="PAGE\ZUZHIPEIXING\LINCHUANGHLA\JIANCESHENQINGDAN\Tianjiashenqingdan.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PAGE\ZUZHIPEIXING\LINCHUANGHLA\JIANCESHENQINGDAN\Tianjiaweidian.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
